# libvlmath

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: codeql.yml  pr-xplat-build-test-autocomplete.yml  pr-xplat-build-test.yml  tagged-release-workflow.yml
libvlmath/: CMakeLists.txt  matrix.cpp  matrix.hpp  matrix.ipp
packaging/: CMakeLists.txt  libvlmathConfig.cmake
toolchains/: gcc-x64-linux.cmake  gcc-x86-linux.cmake  mingw64-x64-win.cmake  mingw64-x86-win.cmake  win-x86-mingw64.cmake
